* Displaying avatars * Displaying country flags * Started styling

--- a/src/main/resources/themes/default/chat_container.html
+++ b/src/main/resources/themes/default/chat_container.html
@@ -3,11 +3,7 @@
 <html>
 <head>
   <link rel="stylesheet" type="text/css" href="./style.css">
-
-  <script>
-    function removeTopmost
-
-  </script>
+  <script src="../../js/Autolinker.min.js"></script>
 </head>
 <body>
 <table id="chat-table">
