--- a/src/main/resources/themes/default/chat_message.html
+++ b/src/main/resources/themes/default/chat_message.html
@@ -2,6 +2,6 @@
 <tr class="chat-message">
   <td class="time">%1$s</td>
   <td class="avatar"><img src="%2$s"/></td>
-  <td class="username">%3$s</td>
+  <td class="username">%3$s:</td>
   <td class="text">%4$s</td>
 </tr>
