* Chat links are now opened in browser * Displaying current games

--- a/src/main/resources/themes/default/chat_container.html
+++ b/src/main/resources/themes/default/chat_container.html
@@ -3,7 +3,10 @@
 <html>
 <head>
   <link rel="stylesheet" type="text/css" href="./style.css">
+
+  <!-- Never omit these imports, otherwise it won't work properly -->
   <script src="../../js/Autolinker.min.js"></script>
+  <script src="../../js/chat_container.js"></script>
 </head>
 <body>
 <table id="chat-table">
