--- a/src/main/resources/themes/default/chat_message.html
+++ b/src/main/resources/themes/default/chat_message.html
@@ -1,7 +1,7 @@
 <!-- The root of a chat message must be a single element with class="chat-message" -->
-<tr class="chat-message">
-  <td class="time">%1$s</td>
-  <td class="avatar"><img src="%2$s"/></td>
-  <td class="username">%3$s:</td>
-  <td class="text">%4$s</td>
+<tr class="chat-message {css-class}">
+  <td class="time">{time}</td>
+  <td class="avatar"><img src="{avatar}"/></td>
+  <td class="username">{clan-tag}{username}:</td>
+  <td class="text">{text}</td>
 </tr>
