* Better naming and documentation of legacy stuff * Improved window handling

--- a/src/main/resources/themes/default/chat_message.html
+++ b/src/main/resources/themes/default/chat_message.html
@@ -1,4 +1,4 @@
-<!-- The root of a chat message must be a single element with class="chat-message" -->
+<!-- The root of a chat domain must be a single element with class="chat-domain" -->
 <tr class="chat-message {css-class}">
   <td class="time">{time}</td>
   <td class="avatar"><img src="{avatar}"/></td>
