--- a/src/main/resources/themes/default/chat_container.html
+++ b/src/main/resources/themes/default/chat_container.html
@@ -7,6 +7,16 @@
   <!-- Never omit these imports, otherwise it won't work properly -->
   <script src="../../js/Autolinker.min.js"></script>
   <script src="../../js/chat_container.js"></script>
+
+  <style type="text/css">
+    .page-preview {
+      width: 400px;
+      height: 260px;
+      border: none;
+      -webkit-transform: scale(0.2);
+      -webkit-transform-origin: 0 0;
+    }
+  </style>
 </head>
 <body>
 <table id="chat-table">
