* Design improvements * Coloring own name in chat * Allowing /me actions

--- a/src/main/resources/themes/default/chat_message.html
+++ b/src/main/resources/themes/default/chat_message.html
@@ -1,7 +1,7 @@
 <!-- The root of a chat domain must be a single element with class="chat-domain" -->
-<tr class="chat-message {css-class}">
+<tr class="chat-message {css-classes}">
   <td class="time">{time}</td>
   <td class="avatar"><img src="{avatar}"/></td>
-  <td class="username">{clan-tag}{username}:</td>
+  <td class="username">{clan-tag}{username}</td>
   <td class="text">{text}</td>
 </tr>
