Hello decent news tab. I think I'll need that WebView transparency fixed the "right" way...

--- a/src/main/resources/themes/default/news_detail.html
+++ b/src/main/resources/themes/default/news_detail.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html class="news-detail">
 <head lang="en">
+  <link rel="stylesheet" type="text/css" href="./style.css">
+
   <meta charset="UTF-8">
 </head>
 <body>
 
-<h1>{news-title}</h1>
+<p>{authored}</p>
 
+<h1>{title}</h1>
+
+{content}
 
 </body>
 </html>
