--- a/src/main/resources/themes/default/chat_container.html
+++ b/src/main/resources/themes/default/chat_container.html
@@ -21,7 +21,7 @@
 <body>
 <table id="chat-table">
 
-  <!-- Message items are alway appended to #chat-container -->
+  <!-- Message items are always appended to #chat-container -->
   <tbody id="chat-container">
 
   </tbody>
