--- a/src/main/resources/themes/default/chat_message.html
+++ b/src/main/resources/themes/default/chat_message.html
@@ -2,6 +2,7 @@
 <tr class="chat-message {css-classes}">
   <td class="time">{time}</td>
   <td class="avatar"><img src="{avatar}"/></td>
-  <td class="username">{clan-tag}{username}</td>
+  <td class="username">{clan-tag}<span onmouseover="showPlayerInfo(this)"
+                                       onmouseout="hidePlayerInfo()">{username}</span></td>
   <td class="text">{text}</td>
 </tr>
