--- a/src/main/resources/themes/default/chat_message.html
+++ b/src/main/resources/themes/default/chat_message.html
@@ -3,6 +3,7 @@
   <td class="time">{time}</td>
   <td class="avatar"><img src="{avatar}"/></td>
   <td class="username">{clan-tag}<span onmouseover="showPlayerInfo(this)"
-                                       onmouseout="hidePlayerInfo()">{username}</span></td>
+                                       onmouseout="hidePlayerInfo()"
+                                       ondblclick="messagePlayer(this)">{username}</span></td>
   <td class="text">{text}</td>
 </tr>
