Fixing corrupt FontAwesome TTF, fixed loading of JavaScript files within chat so it works with java 8u60 as well. Fixes #96

--- a/src/main/resources/themes/default/chat_container.html
+++ b/src/main/resources/themes/default/chat_container.html
@@ -3,8 +3,8 @@
 <html>
 <head>
   <!-- Never omit these imports, otherwise it won't work properly -->
-  <script src="../../js/Autolinker.min.js"></script>
-  <script src="../../js/chat_container.js"></script>
+  <script src="{auto-linker-js}"></script>
+  <script src="{chat-container-js}"></script>
 
   <style type="text/css">
     .page-preview {
