fixed ugly gamestatus, fixed typos

--- a/src/main/resources/themes/default/chat_message.html
+++ b/src/main/resources/themes/default/chat_message.html
@@ -4,6 +4,6 @@
   <td class="avatar"><img src="{avatar}"/></td>
   <td class="username">{clan-tag}<span onmouseover="showPlayerInfo(this)"
                                        onmouseout="hidePlayerInfo()"
-                                       ondblclick="messagePlayer(this)">{username}</span></td>
+                                       onclick="messagePlayer(this)">{username}</span></td>
   <td class="text">{text}</td>
 </tr>
