code review fixes

--- a/src/main/resources/themes/default/chat_message.html
+++ b/src/main/resources/themes/default/chat_message.html
@@ -1,5 +1,5 @@
 <!-- The root of a chat domain must be a single element with class="chat-domain" -->
-<tr class="chat-message {css-classes}">
+<tr class="chat-message {css-classes} {color}">
   <td class="time">{time}</td>
   <td class="avatar"><img src="{avatar}"/></td>
   <td class="username">{clan-tag}<span onmouseover="showPlayerInfo(this)"
