search irc chat

--- a/src/main/resources/themes/default/chat_container.html
+++ b/src/main/resources/themes/default/chat_container.html
@@ -5,6 +5,8 @@
   <!-- Never omit these imports, otherwise it won't work properly -->
   <script src="{auto-linker-js}"></script>
   <script src="{chat-container-js}"></script>
+  <script src="{jquery-js}"></script>
+  <script src="{jquery-highlight-js}"></script>
 
   <style type="text/css">
     .page-preview {
