#225 Implement channel topic listening

--- a/src/main/resources/theme/chat_container.html
+++ b/src/main/resources/theme/chat_container.html
@@ -20,7 +20,7 @@
 </head>
 <body>
 <div id="wrapper">
-  <div id="channel-topic">{channel-topic}</div>
+  <div id="channel-topic"></div>
   <div id="content">
     <table id="chat-table">
       <!-- Message items are always appended to #chat-container -->
