#225 finally fix the floating channel topic (it's ugly - don't do this at home kids!)

--- a/src/main/resources/theme/chat_container.html
+++ b/src/main/resources/theme/chat_container.html
@@ -22,6 +22,7 @@
 <div id="wrapper">
   <div id="channel-topic"></div>
   <div id="content">
+    <div id="channel-topic-shadow"></div>
     <table id="chat-table">
       <!-- Message items are always appended to #chat-container -->
       <tbody id="chat-container">
