--- a/src/main/resources/theme/chat/chat_section.html
+++ b/src/main/resources/theme/chat/chat_section.html
@@ -3,7 +3,11 @@
     <img class="avatar" src="{avatar}"/>
     <img class="country-flag" src="{country-flag}"/>
     <div class="author">
-      <span class="clan-tag">{clan-tag}</span>
+      <span class="clan-tag {css-classes}"
+            onmouseover="showClanInfo(this)"
+            onmouseout="hideClanInfo()"
+            onclick="showClanWebsite(this)"
+      >{clan-tag}</span>
       <span class="username {css-classes}"
             onmouseover="showPlayerInfo(this)"
             onmouseout="hidePlayerInfo()"
