Improve chat look and feel

--- a/src/main/resources/theme/chat/chat_section.html
+++ b/src/main/resources/theme/chat/chat_section.html
@@ -1,6 +1,7 @@
 <div id="chat-section-{section-id}" class="chat-section">
   <div class="chat-section-head">
     <img class="avatar" src="{avatar}"/>
+    <img class="country-flag" src="{country-flag}"/>
     <div class="author">
       <span class="clan-tag">{clan-tag}</span>
       <span class="username {css-classes}"
