Making foeing happen correctly
Do not show messages in channel if sender is foe and do not open tap if foe writes you...
Fixes #692

--- a/src/main/resources/theme/chat/chat_section.html
+++ b/src/main/resources/theme/chat/chat_section.html
@@ -1,4 +1,4 @@
-<div id="chat-section-{section-id}" class="chat-section">
+<div id="chat-section-{section-id}" class="chat-section chat-section-{username}">
   <div class="chat-section-head">
     <img class="avatar" src="{avatar}"/>
     <img class="country-flag" src="{country-flag}"/>
