--- a/src/main/resources/theme/chat/extended/chat_section.html
+++ b/src/main/resources/theme/chat/extended/chat_section.html
@@ -2,7 +2,7 @@
   <div class="chat-section-head">
     <img class="avatar" src="{avatar}"/>
     <img class="country-flag" src="{country-flag}"/>
-    <div class="author">
+    <div class="author" style="{inline-style}">
       <span class="clan-tag {css-classes}"
             onmouseover="showClanInfo('{clan-tag}')"
             onmouseout="hideClanInfo()"
@@ -11,8 +11,7 @@
       <span class="username {css-classes}"
             onmouseover="showPlayerInfo('{username}')"
             onmouseout="hidePlayerInfo()"
-            onclick="messagePlayer('{username}')"
-            style="{inline-style}">{username}</span>
+            onclick="messagePlayer('{username}')">{username}</span>
       <span class="time">{time}</span>
     </div>
   </div>
