Adopt changes according review comments.

--- a/src/main/resources/theme/chat/chat_section.html
+++ b/src/main/resources/theme/chat/chat_section.html
@@ -2,7 +2,7 @@
   <div class="chat-section-head">
     <img class="avatar" src="{avatar}"/>
     <img class="country-flag" src="{country-flag}"
-      onmouseover="showCountryInfo(this)"
+      onmouseover="showCountryInfo('{country-code}')"
       onmouseout="hideCountryInfo()"
     />
     <div class="author">
