--- a/src/main/resources/theme/tournaments/tournament_detail.html
+++ b/src/main/resources/theme/tournaments/tournament_detail.html
@@ -6,20 +6,20 @@
 <body>
 
 <h1>{name}</h1>
-<p><a href="{challonge-url}">open at challonge.com</a></p>
+<p><a href="{challonge-url}">{open-on-challonge-label}</a></p>
 
 <p>
 <table>
   <tr>
-    <th>Game type:</th>
+    <th>{game-type-label}</th>
     <td>{tournament-type}</td>
   </tr>
   <tr>
-    <th>Starting at:</th>
+    <th>{starting-at-label}</th>
     <td>{starting-date}</td>
   </tr>
   <tr>
-    <th>Completed at:</th>
+    <th>{completed-at-label}</th>
     <td>{completed-date}</td>
   </tr>
 </table>
@@ -27,7 +27,72 @@
 
 {description}
 
-<img src="{tournament-image}">
+<div id="imageLoadingDiv">
+  <style>
+    .loader {
+      width: 100px;
+      height: 100px;
+    }
+
+    .circular{
+      animation: rotate 2s linear infinite;
+      height: 100px;
+      position: relative;
+      width: 100px;
+    }
+
+    .path {
+      stroke-dasharray: 1px,200px;
+      stroke-dashoffset: 0;
+      animation:
+          dash 1.5s ease-in-out infinite,
+          color 6s ease-in-out infinite
+    ;
+      stroke-linecap: round;
+    }
+
+    @keyframes rotate{
+      100%{
+        transform: rotate(360deg);
+      }
+    }
+    @keyframes dash{
+      0%{
+        stroke-dasharray: 1px,200px;
+        stroke-dashoffset: 0;
+      }
+      50%{
+        stroke-dasharray: 89px,200px;
+        stroke-dashoffset: -35;
+      }
+      100%{
+        stroke-dasharray: 89px,200px;
+        stroke-dashoffset: -124;
+      }
+    }
+    @keyframes color{
+      100%, 0%{
+        stroke: #d62d20;
+      }
+      40%{
+        stroke: #0057e7;
+      }
+      66%{
+        stroke: #008744;
+      }
+      80%, 90%{
+        stroke: #ffa700;
+      }
+    }
+  </style>
+  <div class="loader">
+    <svg class="circular">
+      <circle class="path" cx="50" cy="50" r="20" fill="none" stroke-width="2" stroke-miterlimit="10"/>
+    </svg>
+  </div>
+</div>
+
+<img src="{tournament-image}" class="slow-image" onload="document.getElementById('imageLoadingDiv').style.display='none'">
 
 </body>
 </html>
