Improve Chat readability
Make names right aligned and reduce font weight on clan tag

--- a/src/main/resources/theme/chat/compact/chat_section.html
+++ b/src/main/resources/theme/chat/compact/chat_section.html
@@ -1,9 +1,11 @@
 <table class="chat-section compact chat-section-{username}">
   <tr>
-    <td class="author">
-      <span class="author" style="{inline-style}">
+    <td class="decoration">
         <img class="avatar" src="{avatar}"/>
         <img class="country-flag" src="{country-flag}"/>
+    </td>
+    <td class="author">
+      <span class="author" style="{inline-style}">
         <span class="clan-tag {css-classes}"
               onmouseover="showClanInfo('{clan-tag}')"
               onmouseout="hideClanInfo()"
