--- a/src/main/resources/theme/chat/compact/chat_section.html
+++ b/src/main/resources/theme/chat/compact/chat_section.html
@@ -5,16 +5,22 @@
         <img class="country-flag" src="{country-flag}"/>
     </td>
     <td class="author">
-      <span class="author" style="{inline-style}">
+      <span class="author">
         <span class="clan-tag {css-classes}"
               onmouseover="showClanInfo('{clan-tag}')"
               onmouseout="hideClanInfo()"
-              onclick="showClanWebsite('{clan-tag}')">{decorated-clan-tag}</span>
+              onclick="showClanWebsite('{clan-tag}')"
+              style="{inline-style}">
+          {decorated-clan-tag}
+        </span>
 
         <span class="username {css-classes}"
               onmouseover="showPlayerInfo('{username}')"
               onmouseout="hidePlayerInfo()"
-              onclick="messagePlayer('{username}')">{username}</span>
+              onclick="messagePlayer('{username}')"
+              style="{inline-style}">
+          {username}
+        </span>
       </span>
     </td>
     <td id="chat-section-{section-id}" class="messages-wrapper">
