Fix css properties not properly changing.

--- a/src/main/resources/theme/chat/compact/chat_section.html
+++ b/src/main/resources/theme/chat/compact/chat_section.html
@@ -1,8 +1,8 @@
-<table class="chat-section compact chat-section-{username}">
+<table class="chat-section compact chat-section-{username}" style="{inline-style}">
   <tr>
     <td class="decoration">
-        <img class="avatar" src="{avatar}"/>
-        <img class="country-flag" src="{country-flag}"/>
+      <img class="avatar" src="{avatar}"/>
+      <img class="country-flag" src="{country-flag}"/>
     </td>
     <td class="author">
       <span class="author">
