--- a/src/main/resources/theme/chat/extended/chat_section.html
+++ b/src/main/resources/theme/chat/extended/chat_section.html
@@ -1,4 +1,4 @@
-<div id="chat-section-{section-id}" class="chat-section extended chat-section-{username}">
+<div class="chat-section extended chat-section-{username}" id="chat-section-{section-id}" style="{inline-style}">
   <div class="chat-section-head">
     <img class="avatar" src="{avatar}"/>
     <img class="country-flag" src="{country-flag}"/>
